<resources>
    <string name="app_name">calci</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="mul">*</string>
    <string name="add">+</string>
    <string name="div">/</string>
    <string name="sub">-</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num3">3</string>
    <string name="num2">2</string>
    <string name="num1">1</string>
    <string name="num4">4</string>
    <string name="initial_text">0</string>
</resources>