<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_above="@+id/layout_row4"
        android:autofillHints="enter exp"
        android:hint="@string/initial_text"
        android:inputType="text"
        android:textAlignment="textEnd"
        android:textColorHint="@color/black"
        android:textSize="35sp" />

    <LinearLayout
        android:id="@+id/layout_row4"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_above="@+id/layout_row3"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn_7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/num7"
            android:textColor="@color/black"
            android:onClick="numClick"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/num8"
            android:textColor="@color/black"
            android:onClick="numClick"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/num9"
            android:textColor="@color/black"
            android:onClick="numClick"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_sub"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/operator"
            android:text="@string/sub"
            android:onClick="operatorClick"
            android:textSize="35sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_row3"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_above="@+id/layout_row2"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="@string/num4"
            android:onClick="numClick"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:onClick="numClick"
            android:text="@string/num5"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="@string/num6"
            android:onClick="numClick"
            android:textSize="30sp"
             />

        <Button
            android:id="@+id/btn_div"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/operator"
            android:text="@string/div"
            android:onClick="operatorClick"
            android:layout_weight="1"
             />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_row2"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_above="@+id/layout_row1"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/num1"
            android:textColor="@color/black"
            android:onClick="numClick"
            android:textSize="30sp"

             />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/num2"
            android:onClick="numClick"
            android:textColor="@color/black"
            android:textSize="30sp"
             />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/num3"
            android:onClick="numClick"
            android:textColor="@color/black"
            android:textSize="30sp"
             />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:backgroundTint="@color/operator"
            android:text="@string/add"
            android:onClick="operatorClick"
            android:textSize="35sp"
             />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_row1"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_above="@+id/cler_layout"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn_dot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="@string/dot"
            android:onClick="numClick"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="@string/zero"
            android:textSize="30sp"
            android:onClick="numClick"
             />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textColor="@color/operator"
            android:backgroundTint="@color/white"
            android:text="C"
            android:onClick="clearButton"
            android:textSize="35sp"
             />

        <Button
            android:id="@+id/btn_mul"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:text="@string/mul"
            android:backgroundTint="@color/operator"
            android:onClick="operatorClick"
            android:layout_weight="1"
             />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/cler_layout"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:weightSum="4"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content">

        <Button
            android:id="@+id/btn_equals"
            android:layout_width="180dp"
            android:layout_height="75dp"
            android:layout_weight="1.5"
            android:layout_margin="5dp"
            android:backgroundTint="@color/operator"
            android:text="@string/equal"
            android:onClick="equalsClick"
            android:textSize="40sp" />
    </LinearLayout>
</RelativeLayout>